# newsletter-crew

./: Dockerfile  README.md  docker-compose.yml  newsletter.md  pyproject.toml  railway.toml  report.md  send_to_discord.py
src/newsletter_crew/: api.py  crew.py  main.py  server.py
src/newsletter_crew/config/: agents.yaml  tasks.yaml
