[project]
name = "newsletter_crew"
version = "0.1.0"
description = "AI Newsletter Crew using crewAI"
authors = [{ name = "Newsletter Crew", email = "crew@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0",
    "crewai-tools>=0.0.16",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.2"
]

[project.scripts]
newsletter_crew = "newsletter_crew.main:run"
run_crew = "newsletter_crew.main:run"
train = "newsletter_crew.main:train"
replay = "newsletter_crew.main:replay"
test = "newsletter_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"